# kintsugi

./: .gitignore  Cargo.toml  README.md  tauri.conf.json
src/: acss.rs  acss_tests.rs  coin.rs  dkg.rs  dkg_tests.rs  dpss.rs  dpss_tests.rs  file_sss.rs  file_sss_tests.rs  kad_interactions.rs  keypair.rs  local_envelope.rs  local_envelope_tests.rs  local_files.rs  login.rs  main.rs  main_tests.rs  messages.rs  node_state.rs  opaque.rs  opaque_tests.rs  oprf.rs  oprf_tests.rs  polynomial.rs  polynomial_tests.rs  recovery.rs  refresh.rs  registration.rs  signature.rs  tauri_interactions.rs  zkp.rs  zkp_tests.rs
src/kintsugi_lib/: acss.rs  acss_tests.rs  dpss.rs  dpss_tests.rs  error.rs  local_envelope.rs  local_envelope_tests.rs  mod.rs  opaque.rs  opaque_tests.rs  oprf.rs  oprf_tests.rs  polynomial.rs  polynomial_tests.rs  signature.rs  util.rs  zkp_tests.rs
web/: index.html  package.json
web/src/: ContactSelection.tsx  Home.tsx  Login.tsx  PeerRecovery.tsx  PeerRegistration.tsx  Recovery.tsx  Register.tsx  main.tsx
web/src/components/: AuthContext.tsx  CopyableCodeblock.tsx  JazziconComponent.tsx  RequiresAuth.tsx  User.tsx
