[package]
name = "op2paque"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version = "1.13.0", features = ["attributes"] }
chacha20poly1305 = "0.10.1"
curve25519-dalek = { version = "4.1.3", features = ["serde"] }
futures = "0.3.31"
itertools = "0.13.0"
libp2p = { version = "0.54.1", features = ["tcp", "tls", "dns", "async-std", "noise", "yamux", "websocket", "ping", "macros"] }
rand = "0.8.5"
serde = "1.0.210"
serde_json = "1.0.128"
sha3 = "0.10.8"
signatures = "0.0.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
voprf = { version = "0.5.0", features = ["serde", "danger"] }
