[package]
name = "op2paque"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
chacha20poly1305 = "0.10.1"
curve25519-dalek = { version = "4.1.3", features = ["serde"] }
derive_more = { version = "1.0.0", features = ["error", "display"] }
futures = "0.3.31"
itertools = "0.13.0"
libp2p = { version = "0.54.1", features = ["tcp", "tls", "dns", "tokio", "noise", "yamux", "websocket", "ping", "macros", "gossipsub", "mdns", "kad", "identify", "serde", "ed25519" ] }
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_with = { version = "3.11.0", features = ["macros"] }
sha3 = "0.10.8"
tauri = { version = "2.0.6", features = ["devtools"] }
tokio = { version = "1.40.0", features = ["macros", "io-std", "sync"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
voprf = { version = "0.5.0", features = ["serde", "danger"] }
